# sdx-browser-game

./: Cargo.toml  package.json  snowpack.config.js  tsconfig.json
assets/: Camera.ts  bootstrapper.ts  glbSample.ts  index.html  main.js
assets/core/renderer/: MeshShader.ts  MeshShaderUtility.ts  mesh.ts  meshSample.ts
assets/core/renderer/shaders/: simple_f.ts  simple_v.ts
assets/core/renderer/types/: MeshShader.d.ts
assets/ffi/: utility.js
assets/loader/glb/: index.ts
assets/types/: glTf.d.ts
assets/utility/: gl.ts
models/test/: suzanne.glb  suzanne.gltf  suzanne1.glb  suzanne2.glb
src/: lib.rs  program.rs
src/definitions/: gltf.rs  mod.rs
src/loader/: mod.rs
src/loader/glb/: mod.rs
src/renderer/: mod.rs
src/renderer/camera/: mod.rs  simple.rs
src/renderer/mesh/: mod.rs  shader.rs
src/renderer/mesh/shader/: buffers.rs  locations.rs  mod.rs  program.rs  textures.rs
src/renderer/scene/: mod.rs
