[package]
name = "sdx-browser-game"
version = "0.1.0"
authors = ["AlcyZ <tbs.schndlr@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.49"

[dependencies.web-sys]
version = "0.3.49"
features = [
    "console",
    'Window',
    'Document',
    'HtmlElement',
    'HtmlCanvasElement',
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation"
]
