[package]
name = "sdx-browser-game"
version = "0.1.0"
authors = ["AlcyZ <tbs.schndlr@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.23"
js-sys = "0.3.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
gl_matrix = "0.0.2"

[dependencies.web-sys]
version = "0.3.49"
features = [
    "console",
    "Window",
    "Document",
    "TextDecoder",
    "Response",
    "Element",
    "Event",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation"
]
